@@ -9,12 +9,12 @@ loader_version=0.15.3
 
 
 # Mod Properties
-	mod_version = 0.4.0
+	mod_version = 1.0.0b
 	maven_group = me.emafire003.dev
 	archives_base_name = lightwithin
 # Dependencies
 	fabric_version=0.88.1+1.20.1
-	coloredglowlib_version = 2.2.2+fabric_1.20.1
+	coloredglowlib_version = 2.2.3+fabric_1.20.1
 	structureplacerapi_version = 1.0.2
 	cardinal_components_version = 5.2.2
 # Optional Dependencies
