@@ -102,3 +102,6 @@ Updated the STRENGTH light VARIANT target:
 
 
 Added suggestion providers for select a new light type / target as well
+
+Added an option to "Lock" a light, aka not being able to activate it from the get-go, but needing a command or eating a luxintus berry.
+By default this option is not active. You can still manually lock someone's light.
